# pony-playground

./: Cargo.toml  INSTALL.md  README.md
.github/: dependabot.yml
.github/workflows/: cargo-check.yaml  docker-image-builds.yml  lint-action-workflows.yml  pr.yml  update-playground.yml
docker/: Dockerfile
src/: api.rs  docker.rs  github.rs  lib.rs  routes.rs
static/: web.css  web.html  web.js
tests/: api.rs
