[package]
authors = ["The Pony Project Developers"]
description = "A web interface for running Pony code"
license = "MIT"
edition = "2021"
name = "pony-playground"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
axum = "0.7"
env_logger = "0.11"
futures = "0.3"

octocrab = "0.44"
libc = "0.2"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.46", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
wait-timeout = "0.2"
url = { version = "2.5", "features" = ["serde"] }

[dev-dependencies]
anyhow = "1.0"
env_logger = "0.11"
http-body-util = "0.1"
portpicker = "0.1"
rustls = "0.23"
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "json",
] }
